[package]
name = "nes_emu"
version = "0.1.0"
authors = ["maximveligan <maximveligan@gmail.com>"]

[lib]
name = "nes_emu"
path = "src/lib.rs"

[dependencies]
nom = "*"
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
sdl2 = "0.32.*"
toml = "*"
bincode = "*"
bitfield = "*"
failure = "*"
log = "*"
env_logger = "*"
