[package]
edition = "2024"
name = "nes_emu"
version = "0.1.0"
authors = ["maximveligan <maximveligan@gmail.com>"]

[dependencies]
anyhow = "*"
thiserror = "*"
nom = "*"
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
bitfield = "*"
log = "*"
env_logger = "*"
itertools = "*"
bincode = { version = "*", features = ["serde"] }
cpu_6502 = { path = "../cpu_6502" }

[dev-dependencies]
hex = "*"
sha3 = "*"
