[package]
edition = "2021"
name = "nes_emu_frontend"
version = "0.1.0"
authors = ["maximveligan <maximveligan@gmail.com>"]

[dependencies]
nes_emu = { path = "../nes_emulator" }
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
toml = "*"
bincode = "*"
itertools = "*"
sha3 = "*"
hex = "*"
glfw = "0.42.0"
luminance = "0.45.0"
luminance-glfw = "0.17.0"
luminance-windowing = "0.10"