[package]
edition = "2024"
name = "nes_emu_frontend"
version = "0.1.0"
authors = ["maximveligan <maximveligan@gmail.com>"]

[dependencies]
anyhow = "*"
nes_emu = { path = "../nes_emulator" }
log = "*"
env_logger = "*"
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
toml = "*"
bincode = "*"
itertools = "*"
sha3 = "*"
hex = "*"
glfw = { version = "*", features = ["wayland"] }
gl = "*"
